[gd_scene load_steps=5 format=2]

[ext_resource path="res://GFX/Faces/eyes blank.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Eyes.gd" type="Script" id=2]
[ext_resource path="res://GFX/Faces/left_eye.png" type="Texture" id=3]
[ext_resource path="res://GFX/Faces/right_eye.png" type="Texture" id=4]

[node name="Eyes" type="Sprite"]

texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
radius = 18

[node name="LeftEye" type="Node2D" parent="." index="0"]

position = Vector2( -42.3333, -31.3933 )

[node name="LeftSprite" type="Sprite" parent="LeftEye" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="RightEye" type="Node2D" parent="." index="1"]

position = Vector2( 46.3764, -30.2041 )
_sections_unfolded = [ "Transform" ]

[node name="RightSprite" type="Sprite" parent="RightEye" index="0"]

texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform" ]


